<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:text="@string/configuration"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/notification_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:text="@string/notification_time"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/second"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:text="@string/state"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/state"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:text="@string/notification_suspended"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/notification_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/notification_start"
                android:textSize="20sp"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/notification_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/notification_end"
                android:textSize="20sp"
                tools:ignore="ButtonStyle"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>